--- a/Courses.html
+++ b/Courses.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
 
-<title>Certificates</title>
+<title>Relevant Academic Coursework</title>
 <style>
 code{white-space: pre-wrap;}
 span.smallcaps{font-variant: small-caps;}
@@ -94,7 +94,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Home</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link" href="./Courses.html"> 
+    <a class="nav-link active" href="./Courses.html" aria-current="page"> 
 <span class="menu-text">Coursework</span></a>
   </li>  
   <li class="nav-item">
@@ -102,7 +102,7 @@ ul.task-list li input[type="checkbox"] {
 <span class="menu-text">Projects</span></a>
   </li>  
   <li class="nav-item">
-    <a class="nav-link active" href="./Certificates.html" aria-current="page"> 
+    <a class="nav-link" href="./Certificates.html"> 
 <span class="menu-text">Certificates</span></a>
   </li>  
 </ul>
@@ -116,15 +116,26 @@ ul.task-list li input[type="checkbox"] {
 <div id="quarto-content" class="quarto-container page-columns page-rows-contents page-layout-article page-navbar">
 <!-- sidebar -->
 <!-- margin-sidebar -->
-    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar zindex-bottom">
-        
+    <div id="quarto-margin-sidebar" class="sidebar margin-sidebar">
+        <nav id="TOC" role="doc-toc" class="toc-active">
+    <h2 id="toc-title">On this page</h2>
+   
+  <ul>
+  <li><a href="#section" id="toc-section" class="nav-link active" data-scroll-target="#section"></a></li>
+  <li><a href="#coursework-completed-and-in-progress" id="toc-coursework-completed-and-in-progress" class="nav-link" data-scroll-target="#coursework-completed-and-in-progress">Coursework Completed and In-Progress</a>
+  <ul class="collapse">
+  <li><a href="#upper-division-and-graduate-level-mathematics-statistics-courses" id="toc-upper-division-and-graduate-level-mathematics-statistics-courses" class="nav-link" data-scroll-target="#upper-division-and-graduate-level-mathematics-statistics-courses">Upper Division and Graduate-Level Mathematics &amp; Statistics Courses</a></li>
+  </ul></li>
+  <li><a href="#lower-division-mathematics-statistics-courses" id="toc-lower-division-mathematics-statistics-courses" class="nav-link" data-scroll-target="#lower-division-mathematics-statistics-courses">Lower Division Mathematics &amp; Statistics Courses</a></li>
+  </ul>
+</nav>
     </div>
 <!-- main -->
 <main class="content" id="quarto-document-content">
 
 <header id="title-block-header" class="quarto-title-block default">
 <div class="quarto-title">
-<h1 class="title">Certificates</h1>
+<h1 class="title">Relevant Academic Coursework</h1>
 </div>
 
 
@@ -141,48 +152,251 @@ ul.task-list li input[type="checkbox"] {
 </header>
 
 
-<div class="slideshow">
-<p><img src="Supervise.jpg" class="img-fluid"> <img src="Machin.jpg" class="img-fluid"> <img src="Advan.jpg" class="img-fluid"> <img src="Unsup.jpg" class="img-fluid"></p>
+<section id="section" class="level2">
+<h2 class="anchored" data-anchor-id="section"></h2>
+</section>
+<section id="coursework-completed-and-in-progress" class="level2">
+<h2 class="anchored" data-anchor-id="coursework-completed-and-in-progress">Coursework Completed and In-Progress</h2>
+<section id="upper-division-and-graduate-level-mathematics-statistics-courses" class="level3">
+<h3 class="anchored" data-anchor-id="upper-division-and-graduate-level-mathematics-statistics-courses">Upper Division and Graduate-Level Mathematics &amp; Statistics Courses</h3>
+<div class="styled-table">
+<table class="caption-top table">
+<colgroup>
+<col style="width: 21%">
+<col style="width: 34%">
+<col style="width: 21%">
+<col style="width: 21%">
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: center;">No.</th>
+<th>Course (Number &amp; Title)</th>
+<th>Term</th>
+<th>Textbook Ref</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: center;">1</td>
+<td>MATH 115A – Linear Algebra</td>
+<td>Fall 2024</td>
+<td>[5]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">2</td>
+<td>STATS 100A – Introduction to Probability</td>
+<td>Fall 2024</td>
+<td>[25], [26]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">3</td>
+<td>MATH 151A – Applied Numerical Methods</td>
+<td>Winter 2025</td>
+<td>[7]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">4</td>
+<td>STATS 100B – Mathematical Statistics</td>
+<td>Winter 2025</td>
+<td>[8]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">5</td>
+<td>STATS 101A – Data Analysis &amp; Regression</td>
+<td>Winter 2025</td>
+<td>[9], [10]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">6</td>
+<td>STATS 100C – Linear Models</td>
+<td>Spring 2025</td>
+<td>[11], [31]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">7</td>
+<td>STATS 101B – Design &amp; Analysis of Experiments</td>
+<td>Spring 2025</td>
+<td>[12]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">8</td>
+<td>STATS 102A – Intro to Computational Statistics (R)</td>
+<td>Summer 2025</td>
+<td>[21], [22], [23], [24]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">9</td>
+<td>MATH 164 – Optimization</td>
+<td>Fall 2025</td>
+<td>[13]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">10</td>
+<td>STATS 101C – Statistical Models &amp; Data Mining</td>
+<td>Fall 2025</td>
+<td>[14]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">11</td>
+<td>STATS 102C – Monte Carlo Methods</td>
+<td>Fall 2025</td>
+<td>[15]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">12</td>
+<td>MATH 156 – Machine Learning</td>
+<td>Winter 2026</td>
+<td>[16]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">13</td>
+<td>MATH 171 – Stochastic Processes</td>
+<td>Winter 2026</td>
+<td>[30]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">14</td>
+<td>STATS 102B – Computation &amp; Optimization for Statistics</td>
+<td>Spring 2026</td>
+<td>[18]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">15</td>
+<td>MATH 182 – Algorithms</td>
+<td>Spring 2026</td>
+<td>[29]</td>
+</tr>
+</tbody>
+</table>
 </div>
-<style>
-.slideshow {
-  position: relative;
-  width: 600px;      /* smaller width */
-  height: 450px;     /* smaller height */
-  margin: auto;
-  overflow: hidden;
-}
+<p><br>
+</p>
+</section>
+</section>
+<section id="lower-division-mathematics-statistics-courses" class="level2">
+<h2 class="anchored" data-anchor-id="lower-division-mathematics-statistics-courses">Lower Division Mathematics &amp; Statistics Courses</h2>
+<div class="styled-table">
+<table class="caption-top table">
+<colgroup>
+<col style="width: 21%">
+<col style="width: 34%">
+<col style="width: 21%">
+<col style="width: 21%">
+</colgroup>
+<thead>
+<tr class="header">
+<th style="text-align: center;">No.</th>
+<th>Course (Number &amp; Title)</th>
+<th>Term</th>
+<th>Textbook Ref</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td style="text-align: center;">1</td>
+<td>MATH-227 – Statistics</td>
+<td>Winter 2022</td>
+<td>[27]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">2</td>
+<td>MATH-229 – Statistics for Data Science</td>
+<td>Summer 2024</td>
+<td>[28]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">3</td>
+<td>MATH 265 – Calculus I</td>
+<td>Winter 2022</td>
+<td>[1]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">4</td>
+<td>MATH 266 – Calculus II</td>
+<td>Spring 2022</td>
+<td>[1]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">5</td>
+<td>MATH 267 – Calculus III</td>
+<td>Fall 2022</td>
+<td>[1]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">6</td>
+<td>MATH 270 – Linear Algebra</td>
+<td>Fall 2022</td>
+<td>[2]</td>
+</tr>
+<tr class="odd">
+<td style="text-align: center;">7</td>
+<td>MATH 272 – Methods of Discrete Mathematics</td>
+<td>Fall 2023</td>
+<td>[3]</td>
+</tr>
+<tr class="even">
+<td style="text-align: center;">8</td>
+<td>MATH 275 – Ordinary Differential Equations</td>
+<td>Spring 2023</td>
+<td>[4]</td>
+</tr>
+</tbody>
+</table>
+</div>
+<div>
 
-/* all images stacked */
-.slideshow img {
-  position: absolute;
-  inset: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
-  background: white;
-  padding: 6px;
-  border-radius: 6px;
-  opacity: 0;
-  animation: fadecert 12s infinite;  /* 4 images × 3s = 12s */
-}
+</div>
+<div class="callout callout-style-default callout-note callout-titled" title="Show Textbook References">
+<div class="callout-header d-flex align-content-center collapsed" data-bs-toggle="collapse" data-bs-target=".callout-1-contents" aria-controls="callout-1" aria-expanded="false" aria-label="Toggle callout">
+<div class="callout-icon-container">
+<i class="callout-icon"></i>
+</div>
+<div class="callout-title-container flex-fill">
+<span class="screen-reader-only">Note</span>Show Textbook References
+</div>
+<div class="callout-btn-toggle d-inline-block border-0 py-1 ps-1 pe-0 float-end"><i class="callout-toggle"></i></div>
+</div>
+<div id="callout-1" class="callout-1-contents callout-collapse collapse">
+<section id="references" class="level2 callout-body-container callout-body">
+<h2 class="anchored" data-anchor-id="references">References</h2>
+<p>[1] Stewart, James. <em>Calculus: Early Transcendentals</em>. 8th ed.&nbsp;Cengage, 2015.<br>
+[2] Larson, Ron. <em>Elementary Linear Algebra</em>. 8th ed.&nbsp;Cengage, 2017.<br>
+[3] Epp, Susanna S. <em>Discrete Mathematics with Applications</em>. 5th ed.&nbsp;Cengage, 2019.<br>
+[4] Zill, Dennis G. <em>A First Course in Differential Equations with Modeling Applications</em>. 11th ed.&nbsp;Cengage, 2018.<br>
+[5] Friedberg, Stephen H., Arnold J. Insel, and Lawrence E. Spence. <em>Linear Algebra</em>. 5th ed.&nbsp;Pearson, 2024.<br>
+[6] Ross, Sheldon M. <em>A First Course in Probability</em>. 10th ed.&nbsp;Pearson, 2019.<br>
+[7] Burden, Richard L., J. Douglas Faires, and Annette M. Burden. <em>Numerical Analysis</em>. 10th ed.&nbsp;Cengage, 2015.<br>
+[8] Rice, John A. <em>Mathematical Statistics and Data Analysis</em>. 3rd ed.&nbsp;Cengage, 2006.<br>
+[9] Sheather, Simon J. <em>A Modern Approach to Regression with R</em>. Springer, 2009.<br>
+[10] Kutner, Michael H., et al.&nbsp;<em>Applied Linear Statistical Models</em>. 5th ed.&nbsp;McGraw-Hill, 2005.<br>
+[11] Abraham, B., and J. Ledolter. <em>Introduction to Regression Modeling</em>. Duxbury, 2006.<br>
+[12] Montgomery, Douglas C. <em>Design and Analysis of Experiments</em>. 9th ed.&nbsp;Wiley, 2017.<br>
+[13] Boyd, Stephen, and Lieven Vandenberghe. <em>Convex Optimization</em>. Cambridge UP, 2004.<br>
+[14] James, Gareth, et al.&nbsp;<em>An Introduction to Statistical Learning with R</em>. 2nd ed., Springer, 2021.<br>
+[15] Robert, Christian P., and George Casella. <em>Introducing Monte Carlo Methods with R</em>. Springer, 2010.<br>
+[16] Bishop, Christopher M. <em>Pattern Recognition and Machine Learning</em>. Springer, 2006.<br>
+[17] Durrett, Rick. <em>Essentials of Stochastic Processes</em>. 2nd ed.&nbsp;Springer, 2012.<br>
+[18] Zhou, Qing. <em>Course Notes for STATS 102B</em>. UCLA.<br>
+[19] Isaaks, Edward H., and R. Mohan Srivastava. <em>An Introduction to Applied Geostatistics</em>. Oxford UP, 1989.<br>
+[20] UCLA Statistics 100C course handouts.<br>
+<a href="http://www.stat.ucla.edu/~nchristo/statistics100C/" class="uri">http://www.stat.ucla.edu/~nchristo/statistics100C/</a><br>
+[21] Wickham, Hadley. <em>Advanced R</em>. 2nd ed.&nbsp;Chapman &amp; Hall/CRC, 2019.<br>
+[22] Jones, O., R. Maillardet, and A. Robinson. <em>Introduction to Scientific Programming and Simulation Using R</em>. CRC Press, 2009.<br>
+[23] Chang, Winston. <em>R Graphics Cookbook</em>. O’Reilly, 2012.<br>
+[24] Zieffler, Andrew, et al.&nbsp;<em>Comparing Groups Using R</em>. Wiley, 2011.<br>
+[25] DeGroot, Morris H., and Mark J. Schervish. <em>Probability and Statistics</em>. 4th ed.&nbsp;Pearson, 2012.<br>
+[26] Hogg, Robert V., et al.&nbsp;<em>Probability and Statistical Inference</em>. 10th ed.&nbsp;Pearson, 2019.<br>
+[27] Illowsky, Barbara, and Susan Dean. <em>Introductory Statistics</em>. 2nd ed.&nbsp;OpenStax, 2022.<br>
+[28] Adhikari, Ani, et al.&nbsp;<em>Computational and Inferential Thinking</em>. 2nd ed., 2022.<br>
+[29] Kleinberg, Jon, and Éva Tardos. <em>Algorithm Design</em>. Addison-Wesley.<br>
+[30] Durrett, Rick. <em>Essentials of Stochastic Processes</em>. 2nd ed.&nbsp;Springer, 2012.<br>
+[31] UCLA Statistics 100C handouts.</p>
+</section>
+</div>
+</div>
 
-/* timing (3 seconds each, with overlap so no blank) */
-.slideshow img:nth-child(1) { animation-delay: 0s; }
-.slideshow img:nth-child(2) { animation-delay: 3s; }
-.slideshow img:nth-child(3) { animation-delay: 6s; }
-.slideshow img:nth-child(4) { animation-delay: 9s; }
 
-@keyframes fadecert {
-  0%   { opacity: 0; }
-  5%   { opacity: 1; }   /* fade in */
-  30%  { opacity: 1; }   /* stay fully visible */
-  35%  { opacity: 0; }   /* fade out */
-  100% { opacity: 0; }
-}
-</style>
-
-
+</section>
 
 </main> <!-- /main -->
 <script id="quarto-html-after-body" type="application/javascript">
